fixed some minimal things such as overflow of the lists

--- a/angularprojet/src/app/components/todo_component/todo_component.scss
+++ b/angularprojet/src/app/components/todo_component/todo_component.scss
@@ -4,37 +4,42 @@ $priorities: (
   'high': #c91010
 );
 
-:host{
-  font-family:'mortane';
+:host {
+  font-family: 'mortane';
   margin: auto;
 }
 
 @each $name, $value in $priorities {
-    .priority-badge#{$name} {
- background-color:darken($value, 60%);
-        color:($value);
-        padding: 4px 10px;
-  border-radius: 6px;
-  font-size: 11px;
-  font-weight: 700;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-  transition: all 0.3s ease;
-}
+  .priority-badge#{$name} {
+    background-color: scale-color($value, $alpha: -45%);
+    color: rgb(54, 53, 53);
+    padding: 4px 10px;
+    border-radius: 6px;
+    font-size: 11px;
+    font-weight: 700;
+    text-transform: uppercase;
+    text-shadow: 0px 0px 2px $value;
+    letter-spacing: 0.7px;
+    transition: all 0.3s ease;
+    font-family: 'lilex';
+  }
 
 }
-.card-footer{
+
+.card-footer {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
 }
+
 .cdk-drag-preview {
-box-shadow: 4px 3px 15px 0px black;
-opacity: 0.9;
-transform: scale(1.05);
-border: 1px solid #000000;
+  box-shadow: 4px 3px 15px 0px black;
+  opacity: 0.9;
+  transform: scale(1.05);
+  border: 1px solid #000000;
 }
+
 .cdk-drag-placeholder {
   opacity: 0.3;
   background: #ececec;
@@ -42,48 +47,69 @@ border: 1px solid #000000;
 
 .example-list {
   min-height: 30px;
-  max-height: 450px;
   background-color: #ffffff2c;
   padding: 10px;
   border-radius: 15px;
 }
-.task-title{
+
+.task-title {
   font-size: 18px;
   cursor: pointer;
 
 }
-.example-box{
+
+.example-box {
   padding: 10px;
-  border-radius:15px;
-  background-color: rgb(235, 231, 226) ;
+  border-radius: 15px;
+  background-color: rgb(235, 231, 226);
   color: #333;
   margin: 7px 7px;
+
   // cursor:grab;
   &:active {
-    cursor:grabbing;
+    cursor: grabbing;
   }
 }
+
 .kanban-board {
-  // display: flex;
-  // justify-items: flex-start;
-  // justify-content: space-around;
-  // gap: 5px;
-  // padding: 20px;
-      display: grid;
-    grid-auto-flow: column;
-    align-items: baseline;
-    justify-items: stretch;
+  display: flex;
+  justify-items: flex-start;
+  justify-content: space-around;
+  gap: 5px;
+  padding: 20px;
+  // display: grid;
+  // grid-auto-flow: column;
+  // align-items: baseline;
+  // justify-items: stretch;
 }
+
 .container {
   background-color: #1a1b1b;
   border-radius: 15px;
   padding: 20px;
   box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.2784313725);
   color: #eee;
-  max-width: 330px;
+  max-width: 29vw;
+  width: 29vw;
+  min-width: 330px;
 }
-.delete-button{
-  border:none;
+
+.delete-button {
+  border: none;
   background-color: rgba(0, 0, 0, 0);
   cursor: pointer;
+}
+.list-top-bar {
+  display: flex;
+  justify-content: space-between;
+  button{
+    background-color: #00000000;
+    color: #eee;
+    border-radius: 25px;
+    border-color: #eee;
+    width: 25px;
+    height: 25px;
+    align-self: center;
+    border-style: solid;
+  }
 }
