--- a/angularprojet/src/app/components/todo_input/todo_input.scss
+++ b/angularprojet/src/app/components/todo_input/todo_input.scss
@@ -57,7 +57,8 @@ $priorities: (
     overflow: hidden;
     width: 485px;
     height: 15px;
-    background-color: rgba(122, 61, 61, 0.1019607843);
+    background-color: scale-color($value, $alpha: -85%);
+    // background-color: rgba(122, 61, 61, 0.1019607843);
     box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.2784313725);
     border-radius: 15px;
     padding: 15px;
@@ -268,25 +269,41 @@ form {
     justify-content: center;
     gap: 20px;
 }
-.delete-completed-button{
-    width: 100px;
-    height: 50px;
-    background-color: #ececec;
-    color: rgba(204, 30, 30, 0.95);
-    border-style: solid;
-    border-width: 1px;
-    border-color: rgba(204, 30, 30, 0.95);
-    border-radius: 15px;
-    box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.2784313725);
-    cursor: pointer;
-    font-family: 'lilex', sans-serif;
-    letter-spacing: 0px;
 
-    &:hover {
-        background-color: #ff0000;
-        color: #ffffff;
-        box-shadow: 0 0 20px #ff0000b4;
-        transition: all 0.3s ease-in-out;
-        font-weight: 700;
+// testing below 
+
+// Target your specific input by ID
+#todo-deadline {
+  // --- 1. Base Input Styling ---
+  border: solid 1px rgb(190, 190, 190);
+    resize: none;
+    overflow: hidden;
+    width: 485px;
+    height: 25px;
+    background-color: rgba(122, 61, 61, 0.1019607843);
+    box-shadow: 4px 4px 9px 0px rgba(0, 0, 0, 0.2784313725);
+    border-radius: 15px;
+    padding: 15px;
+    &:focus-visible {
+        outline: none;
+        border: solid 1px (black);
+        width: 485px;
+        
     }
+  &:hover {
+    cursor: text;
+  }
+
+
+  &::-webkit-calendar-picker-indicator {
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 4px;
+    filter: invert(0.3);
+    
+    &:hover {
+      background-color: #f5f5f5;
+    }
+  }
+
 }
